[MAZ-260][MAZ-263][MAZ-258] Several bug fixes (#66)
* Fix incorrect redirect after signin

* fix skills not showing up in referrals

* fix type errors

* fix inter font not loading

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,12 @@
 @layer base {
   @font-face {
     font-family: 'Inter';
-    src: url('/fonts/Inter.ttf') format('true');
+    src: url('/fonts/Inter.ttf');
   }
 
   @font-face {
     font-family: 'Masqualero';
-    src: url('/fonts/Masqualero Regular.ttf') format('true');
+    src: url('/fonts/Masqualero Regular.otf') format('opentype');
     font-weight: normal;
   }
 
